# gweek

./: .gitignore  Cargo.toml  README.md  serve.sh
.cargo/: config.toml
.github/workflows/: pages.yml
benchmark/: .gitignore  RESULTS.md  run.py
benchmark/curry/: Coins.curry  Coins10.curry  CoinsSmall.curry  FindList.curry  FindListSmall.curry  Half.curry  Last.curry  NQueens.curry  Perm.curry  PermSimple.curry  PermSort.curry
benchmark/gweek/: coins5.gwk  half.gwk  last.gwk  perm_simple.gwk  permsort.gwk
docs/: notes.md  search-strategies.md
docs/oopsla/: .gitignore  benchmarking.tex  cbpv-equations.tex  cbpv-machine.tex  cbpv-syntax.tex  cbpv-typing.tex  cbpv.sty  cbv-syntax.tex  cbv-translation.tex  cbv-typing.tex  ck-macros.sty  conclusions.tex  domains.sty  examples.tex  implementation.tex  intro.tex  ir.tex  lambda-macros.sty  language.tex  latexmkrc  machine.tex  macros.sty  main.tex  maths.sty  optimisation.tex  preamble.sty  refs.bib  related-work.tex  search.tex  suspensions.tex
examples/: coins.gwk  fair.gwk  fibonacci_search.bll  find_list.gwk  magic.gwk  magic4.gwk  magic4_slow.gwk  magic_slow.gwk  map_color.gwk  nqueens.gwk  nqueens10.gwk  perm.gwk  sort.gwk  subset_sum.gwk  test.gwk
src/: lib.rs  main.rs  type_check.rs
src/machine/: config.rs  env.rs  eval.rs  lvar.rs  mod.rs  mterms.rs  optimize.rs  senv.rs  step.rs  translate.rs  unify.rs  union_find.rs  value_type.rs  vclosure.rs
src/parser/: cases.rs  decl.rs  expr.rs  mod.rs  parse.rs  stm.rs  stmt.rs  type.rs
web/: app.js  index.html  playground.html  style.css  worker.js
(+2 files in other folders)
